Author changes net name

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "xhr",
     "reactive"
   ],
-  "author": "Feng Chu",
+  "author": "Wang Jiang",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/reixs/reixs/issues"
