--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-eslint": "^10.0.1",
