--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["@babel/preset-env"],
   "plugins": [
       "@babel/plugin-proposal-object-rest-spread",
+      "@babel/plugin-transform-runtime",
       ["@babel/plugin-proposal-decorators", { "legacy": true }],
       ["@babel/plugin-proposal-class-properties", { "loose" : true }]
   ]
