--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-eslint": "^5.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.1",
+    "http-proxy-middleware": "^0.19.1",
     "pre-commit": "^1.2.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
