--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": ["@babel/preset-env"],
   "plugins": [
-      "@babel/plugin-proposal-object-rest-spread",
+      ["@babel/plugin-proposal-object-rest-spread",{ "loose": true, "useBuiltIns": true }],
       "@babel/plugin-transform-runtime",
       ["@babel/plugin-proposal-decorators", { "legacy": true }],
       ["@babel/plugin-proposal-class-properties", { "loose" : true }]
-  ]
+  ],
 }
