--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.3.1",
-    "@babel/preset-stage-0": "^7.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^11.0.0-beta.0",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.3",
     "browserify": "^16.2.3",
