--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "reixs",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "description": "The HTTP request library",
-  "main": "index.js",
+  "main": "./dist/reixs.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint --ext .js src",
