--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 node_js:
- - '0.10'
- - '0.11'
+  - 0.10
+  - 0.11
+  - 0.12
 
-script: npm run start
+script: 
+  - npm install
+  - npm run test
 
 branches:
   only:
