--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "The HTTP request library",
   "main": "./dist/reixs.js",
   "scripts": {
-    "report-coverage": "npx codecov",
-    "test": "npx gulp test",
+    "report-coverage": "codecov",
+    "test": "gulp test",
     "eslint": "eslint --ext .js src",
-    "dev": "npx gulp watch",
-    "build": "npx gulp release"
+    "dev": "gulp watch",
+    "build": "gulp release"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "browser-sync": "^2.26.3",
     "browserify": "^16.2.3",
     "browserify-versionify": "^1.0.6",
+    "codecov": "^3.3.0",
     "del": "^3.0.0",
     "eslint-plugin-html": "^5.0.3",
     "gulp": "^4.0.0",
