--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "report-coverage": "codecov",
     "coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "test": "gulp test",
+    "karma": "karma start",
     "eslint": "eslint --ext .js src",
     "dev": "gulp watch",
     "build": "gulp release"
@@ -56,6 +57,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-jasmine": "^2.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
     "pre-commit": "^1.2.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
