--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.4",
     "clone-deep": "^4.0.1",
-    "is-plain-object": "^3.0.0"
+    "is-plain-object": "^3.0.0",
+    "kind-of": "^6.0.2"
   }
 }
